testsuite/tests/typing-layouts/parsing.compilers.reference
type 'a t0 = 'a list
Line 2, characters 22-24:
2 | type ('a : void) t0 = 'a list;;
                          ^^
Error: This type ('a : value) should be an instance of type ('a0 : void)
       'a has layout void, which does not overlap with value.
       'a was constrained by the annotation on ''a
         in the declaration of the type t0/275[2]
       The latter was constrained during unification with a type variable
       and during unification with a type variable
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Syntax error: layout expected.

